--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,90 +1,76 @@
-<%
-# sources:
-# https://stackoverflow.com/questions/5113248/devise-update-user-without-password
-# https://github.com/heartcombo/devise/wiki/How-To:-Allow-users-to-edit-their-account-without-providing-a-password
-%>
+<%= render :partial=> 'partials/header_page_title', locals: {
+    title: 'Edit Your Profile'
+} %>
 
-<div class="col-md-8 col-md-offset-2">
-    <div class="row">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h2>Edit Your Account</h2>
-            </div>
-
-            <div class="panel-body">
-                <%= form_for(
-                    resource,
-                    # as: resource_name,
-                    # url: registration_path(resource_name),
-                    url: '/users/update',
-                    html: {
-                        method: :put,
-                        multipart: true
-                }) do |f| %>
-
-                    <%= devise_error_messages! %>
-
-                    <%= f.hidden_field :id %>
-
-                    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-                        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-                    <% end %>
-                    <br>
-
-                    <div class="input-group">
-                        <span class="input-group-addon">Username</span>
-                        <%= f.text_field :username, class: "form-control", disabled: true %>
-                    </div>
-                    <br>
-
-                    <div class="input-group">
-                        <span class="input-group-addon">Email</span>
-                        <%= f.email_field :email, class: "form-control" %>
-                    </div>
-                    <br>
-
-                    <div class="input-group">
-                        <span class="input-group-addon">Profile image</span>
-                        <%= f.file_field :avatar, class: "form-control" %>
-                    </div>
-                    <br>
-
-                    <div class="input-group">
-                        <span class="input-group-addon">Biography</span>
-                        <%= f.text_area :bio, class: "form-control" %>
-                    </div>
-                    <br>
-
-                    <div class="small-heading", style="color:red">Optional: <br />
-                    - The following two fields must match to change password. <br />
-                    - You will be prompted to log in with your new password after the change.<br />
-                    - Password should be 8-128 characters and include: 1 uppercase (A-Z), 1 lowercase (a-z), 1 digit (0-9) and 1 special character (~!@#$%^&*()_+`-=).
-                    </div>
-                    <br>
-
-
-                    <div class="input-group">
-                        <span class="input-group-addon">New Password</span>
-                        <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
-                    </div>
-                    <br>
-
-                    <div class="input-group">
-                        <span class="input-group-addon">New Password Confirmation</span>
-                        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
-                    </div>
-                    <br>
-
-                    <div class="input-group">
-                        <div class="actions">
-                            <%= f.submit "Update Profile",
-                                class: "btn btn-success",
-                                id: "profile_submit"
-                            %>
+<!-- Start Content -->
+<div id="content" class="section-padding">
+    <div class="container">
+        <div class="row">
+            <%= render :partial=> 'users/partials/side_menu', locals: {
+                current_user: current_user
+            } %>
+            <div class="col-sm-12 col-md-8 col-lg-9">
+                <div class="page-content">
+                    <div class="inner-box">
+                        <div class="tg-contactdetail">
+                            <div class="dashboard-box">
+                                <h2 class="dashbord-title">My Profile Settings</h2>
+                            </div>
+                            <%= form_for(
+                                resource,
+                                url: '/users/update',
+                                html: {
+                                    method: :put,
+                                    multipart: true
+                                }
+                            ) do |f| %>
+                                <div class="form-group">
+                                    <%= devise_error_messages! %>
+                                    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+                                        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+                                    <% end %>
+                                </div>
+                                <%= f.hidden_field :id %>
+                                <div class="dashboard-wrapper">
+                                    <div class="form-group mb-3">
+                                        <label class="control-label">Username</label>
+                                        <%= f.text_field :username, class: "form-control input-md", disabled: true %>
+                                    </div>
+                                    <div class="form-group mb-3">
+                                        <label class="control-label">My Email</label>
+                                        <%= f.email_field :email, class: "form-control input-md" %>
+                                    </div>
+                                    <div class="form-group mb-3">
+                                        <label class="control-label">Profile Image</label>
+                                        <%= f.file_field :avatar, class: "form-control input-md" %>
+                                    </div>
+                                    <div class="form-group mb-3">
+                                        <label class="control-label">Biography</label>
+                                        <%= f.text_area :bio, class: "form-control input-md" %>
+                                    </div>
+                                    <hr>
+                                    <div class="small-heading" , style="color:red">Optional: <br />
+                                        - The following two fields must match to change password. <br />
+                                        - You will be prompted to log in with your new password after the change.<br />
+                                        - Password should be 8-128 characters and include: 1 uppercase (A-Z), 1 lowercase (a-z), 1 digit (0-9) and 1 special character (~!@#$%^&*()_+`-=).
+                                    </div>
+                                    <br>
+                                    <div class="form-group mb-3">
+                                        <label class="control-label">New Password</label>
+                                        <%= f.password_field :password, autocomplete: "off" , class: "form-control input-md" %>
+                                    </div>
+                                    <div class="form-group mb-3">
+                                        <label class="control-label">New Password Confirmation</label>
+                                        <%= f.password_field :password_confirmation, autocomplete: "off" , class: "form-control input-md" %>
+                                    </div>
+                                    <%= f.submit "Update Profile" , class: "btn btn-common" , id: "profile_submit" %>
+                                <% end %>
+                            </div>
                         </div>
                     </div>
-                <% end %>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<br>
+<!-- End Content -->
