--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,11 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
 
     <!-- Apple PWA -->
-    <link rel="manifest" href="//manifest.json">
-    <link rel="apple-touch-icon" href="//apple-touch-icon.png">
+    <!--<link rel="manifest" href="//manifest.json">
+    <link rel="apple-touch-icon" href="//apple-touch-icon.png">-->
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
     <!-- Icon -->
     <link rel="stylesheet" type="text/css" href="/assets/fonts/line-icons.css">
     <link rel="stylesheet" type="text/css" href="/assets/fonts/fontawesome.css">
@@ -66,18 +66,18 @@
 
     <%= javascript_include_tag 'application' %>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/assets/js/jquery-min.js"></script>
-    <script src="/assets/js/popper.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/jquery.js"></script>
+    <script src="/assets/js/popper.js"></script>
+    <script src="/assets/js/bootstrap.js"></script>
 
-    <script src="/assets/js/jquery.counterup.min.js"></script>
-    <script src="/assets/js/waypoints.min.js"></script>
+    <script src="/assets/js/jquery.counterup.js"></script>
+    <script src="/assets/js/waypoints.js"></script>
     <script src="/assets/js/wow.js"></script>
-    <script src="/assets/js/owl.carousel.min.js"></script>
+    <script src="/assets/js/owl.carousel.js"></script>
     <script src="/assets/js/jquery.slicknav.js"></script>
     <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/form-validator.min.js"></script>
-    <script src="/assets/js/contact-form-script.min.js"></script>
+    <script src="/assets/js/form-validator.js"></script>
+    <script src="/assets/js/contact-form-script.js"></script>
     <script src="/assets/js/summernote.js"></script>
     
   </body>
