--- a/app/views/users/partials/_side_menu.html.erb
+++ b/app/views/users/partials/_side_menu.html.erb
@@ -2,11 +2,13 @@
     <aside>
         <div class="sidebar-box">
             <div class="user">
+            <% if current_user.avatar_file_name? %>
                 <figure>
                     <a href="#">
-                        <img src="/assets/img/author/img1.jpg" alt="">
+                        <img src="<%= current_user.avatar_file_name %>" alt="<%= current_user.username %>">
                     </a>
                 </figure>
+            <% end %>
                 <div class="usercontent">
                     <h3>Hello <%= current_user.username %></h3>
                 </div>
