--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,9 @@
 <div id="content" class="section-padding">
     <div class="container">
         <div class="row">
-            <%= render :partial => 'users/partials/side_menu' %>
+            <%= render :partial=> 'users/partials/side_menu', locals: {
+                current_user: current_user
+            } %>
             <div class="col-sm-12 col-md-8 col-lg-9">
                 <div class="page-content">
                     <div class="inner-box">
