--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -138,7 +138,7 @@
                                         %>
                                     </div>
                                     <div class="form-group mb-3">
-                                        <%= f.submit "Submit Listing",
+                                        <%= f.submit "Continue to Step 2",
                                             class: "btn btn-success",
                                             id: "listings_submit"
                                         %>
