--- a/app/views/listings/upload.html.erb
+++ b/app/views/listings/upload.html.erb
@@ -1,50 +1,65 @@
-<div class="col-md-8 col-md-offset-2">
-    <div class="row">
-        <div class="panel panel-default">
+<%= render :partial => 'partials/header_page_title', locals: {
+    title: 'Post an Ad'
+} %>
 
-            <div class="panel-heading">
-                <h2>Upload Media for Listing</h2>
-                <div>Please provide a video file for your listing. File types .avi, .mov, .mp4, .mkv are accepted.</div>
-            </div>
+<!-- Start Content -->
+<div id="content" class="section-padding">
+    <div class="container">
+        <div class="row">
+            <%= render :partial=> 'users/partials/side_menu', locals: {
+                current_user: current_user
+            } %>
+            <div class="col-sm-12 col-md-8 col-lg-9">
+                <div class="page-content">
+                    <div class="inner-box">
+                        <div class="tg-contactdetail">
+                            <div class="dashboard-box">
+                                <h2 class="dashbord-title">Upload Video for Listing</h2>
+                            </div>
+                            <div class="dashboard-box">
+                                <h4 class="dashbord-title">Please provide a video file for your listing. File types .avi, .mov, .mp4, .mkv are accepted.</h4>
+                            </div>
+                            <div class="dashboard-wrapper">
+                                <%= form_for(@listing, html: {
+                                    authenticity_token: true,
+                                    data: {
+                                        'form-data' => (@s3_direct_post.fields),
+                                        'url' => @s3_direct_post.url,
+                                        'host' => URI.parse(@s3_direct_post.url).host
+                                    },
+                                    class: 'form-horizontal ',
+                                    id: 'new_listing_upload',
+                                    multipart: true,
+                                }) do |f| %>
 
-            <div class="panel-body">
+                                    <%= f.file_field :listing,
+                                        accept: ".avi, .mov, .mp4, .mkv",
+                                        class:"form-control",
+                                        id: "fileupload",
+                                        required: true,
+                                        type: "file"
+                                    %>
 
-                <%= form_for(@listing, html: {
-                    authenticity_token: true,
-                    data: {
-                        'form-data' => (@s3_direct_post.fields),
-                        'url' => @s3_direct_post.url,
-                        'host' => URI.parse(@s3_direct_post.url).host
-                    },
-                    class: 'form-horizontal ',
-                    id: 'new_listing_upload',
-                    multipart: true,
-                }) do |f| %>
+                                    <input id="submit-hidden" type="submit" style="display: none" />
 
-                    <%= f.file_field :listing,
-                        accept: ".avi, .mov, .mp4, .mkv",
-                        class:"form-control",
-                        id: "fileupload",
-                        required: true,
-                        type: "file"
-                    %>
+                                    <br>
+                                        <div id="listing_media_info"></div>
+                                    <br>
 
-                    <input id="submit-hidden" type="submit" style="display: none" />
+                                    <div id="listing_media_progress"></div>
 
-                    <br>
-                    <div id="listing_media_info"></div>
-                    <br>
+                                <% end %>
 
-                    <div id="listing_media_progress"></div>
+                                <div class="input-group">
+                                    <div class="actions">
+                                        <button class="btn btn-success" id="listings_submit">Complete Listing</button>
+                                    </div>
+                                </div>
 
-                <% end %>
-
-                <div class="input-group">
-                    <div class="actions">
-                        <button class="btn btn-success" id="listings_submit">Submit</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
@@ -53,121 +68,121 @@
 <%= render :partial => 'partials/processing_overlay' %>
 
 <script>
-$("#listings_submit").on("click", function() {
-    if (!$("#new_listing_upload")[0].checkValidity()) {
-        $("#new_listing_upload").find("#submit-hidden").click();
-    }
-});
+    $(function () {
+    $("#listings_submit").on("click", function() {
+        if (!$("#new_listing_upload")[0].checkValidity()) {
+            $("#new_listing_upload").find("#submit-hidden").click();
+        }
+    });
 
-$(function () {
-    var media_file = [];
+        var media_file = [];
 
-    document.getElementById('fileupload').onchange = setFileInfo;
+        document.getElementById('fileupload').onchange = setFileInfo;
 
-    function setFileInfo() {
-        var files = this.files;
-        media_file.push(files[0]);
-        var video = document.createElement('video');
-        video.preload = 'metadata';
+        function setFileInfo() {
+            var files = this.files;
+            media_file.push(files[0]);
+            var video = document.createElement('video');
+            video.preload = 'metadata';
 
-        video.onloadedmetadata = function() {
-            var duration = video.duration;
-            media_file[media_file.length - 1].duration = duration;
-            var infos = document.getElementById('listing_media_info');
-            infos.textContent = "";
-            for (var i = 0; i < media_file.length; i++) {
-                // infos.textContent += media_file[i].name + " duration: " + media_file[i].duration + '\n';
-                infos.textContent = "Duration: " + sec2time(media_file[i].duration) + '\n';
+            video.onloadedmetadata = function() {
+                var duration = video.duration;
+                media_file[media_file.length - 1].duration = duration;
+                var infos = document.getElementById('listing_media_info');
+                infos.textContent = "";
+                for (var i = 0; i < media_file.length; i++) {
+                    // infos.textContent += media_file[i].name + " duration: " + media_file[i].duration + '\n';
+                    infos.textContent = "Duration: " + sec2time(media_file[i].duration) + '\n';
+                }
             }
+
+            function sec2time(timeInSeconds) {
+                var pad = function(num, size) { return ('000' + num).slice(size * -1); },
+                time = parseFloat(timeInSeconds).toFixed(3),
+                hours = Math.floor(time / 60 / 60),
+                minutes = Math.floor(time / 60) % 60,
+                seconds = Math.floor(time - minutes * 60),
+                milliseconds = time.slice(-3);
+
+                // return pad(hours, 2) + ':' + pad(minutes, 2) + ':' + pad(seconds, 2) + ',' + pad(milliseconds, 3);
+                return  minutes + ' minutes and ' + pad(seconds, 2) + ' seconds.';
+            }
+
+            video.src = URL.createObjectURL(files[0]);
         }
 
-        function sec2time(timeInSeconds) {
-            var pad = function(num, size) { return ('000' + num).slice(size * -1); },
-            time = parseFloat(timeInSeconds).toFixed(3),
-            hours = Math.floor(time / 60 / 60),
-            minutes = Math.floor(time / 60) % 60,
-            seconds = Math.floor(time - minutes * 60),
-            milliseconds = time.slice(-3);
+        $('#new_listing_upload').find("input:file").each(function(i, elem) {
+            var fileInput = $(elem);
+            var form = $(fileInput.parents('form:first'));
+            var submitButton = form.find('input[type="submit"]');
+            var progressBar  = $("<div class='bar'></div>");
+            var barContainer = $("<div class='progress'></div>").append(progressBar);
 
-            // return pad(hours, 2) + ':' + pad(minutes, 2) + ':' + pad(seconds, 2) + ',' + pad(milliseconds, 3);
-            return  minutes + ' minutes and ' + pad(seconds, 2) + ' seconds.';
-        }
+            $('#listing_media_progress').after(barContainer);
 
-        video.src = URL.createObjectURL(files[0]);
-    }
+            fileInput.fileupload({
+                fileInput: fileInput,
+                url: form.data('url'),
+                type: 'POST',
+                autoUpload: false,
+                formData: form.data('form-data'),
+                paramName: 'file', // S3 does not like nested name fields i.e. name="user[avatar_url]"
+                dataType: 'XML',  // S3 returns XML if success_action_status is set to 201
+                replaceFileInput: false,
+                add: function (e, data) {
+                    $('button#listings_submit').off('click').on('click', function () {
+                        $("#overlay").toggle()
+                        data.submit();
+                    });
+                },
+                progressall: function (e, data) {
+                    var progress = parseInt(data.loaded / data.total * 100, 10);
+                    progressBar.css('width', progress + '%')
+                },
+                start: function (e) {
+                    submitButton.prop('disabled', true);
+                    progressBar.
+                        css('background', 'green').
+                        css('display', 'block').
+                        css('width', '0%').
+                        text("Loading...");
+                },
+                done: function(e, data) {
+                    submitButton.prop('disabled', false);
+                    progressBar.text("Uploading done");
 
-    $('#new_listing_upload').find("input:file").each(function(i, elem) {
-        var fileInput = $(elem);
-        var form = $(fileInput.parents('form:first'));
-        var submitButton = form.find('input[type="submit"]');
-        var progressBar  = $("<div class='bar'></div>");
-        var barContainer = $("<div class='progress'></div>").append(progressBar);
+                    // extract key and generate URL from response
+                    var key   = $(data.jqXHR.responseXML).find("Key").text();
+                    var url   = '//' + form.data('host') + '/' + key;
+                    var url_path = window.location.pathname.split('/');
+                    var listings_id = url_path[url_path.length - 1];
 
-        $('#listing_media_progress').after(barContainer);
-
-        fileInput.fileupload({
-            fileInput: fileInput,
-            url: form.data('url'),
-            type: 'POST',
-            autoUpload: false,
-            formData: form.data('form-data'),
-            paramName: 'file', // S3 does not like nested name fields i.e. name="user[avatar_url]"
-            dataType: 'XML',  // S3 returns XML if success_action_status is set to 201
-            replaceFileInput: false,
-            add: function (e, data) {
-                $('button#listings_submit').off('click').on('click', function () {
-                    $("#overlay").toggle()
-                    data.submit();
-                });
-            },
-            progressall: function (e, data) {
-                var progress = parseInt(data.loaded / data.total * 100, 10);
-                progressBar.css('width', progress + '%')
-            },
-            start: function (e) {
-                submitButton.prop('disabled', true);
-                progressBar.
-                    css('background', 'green').
-                    css('display', 'block').
-                    css('width', '0%').
-                    text("Loading...");
-            },
-            done: function(e, data) {
-                submitButton.prop('disabled', false);
-                progressBar.text("Uploading done");
-
-                // extract key and generate URL from response
-                var key   = $(data.jqXHR.responseXML).find("Key").text();
-                var url   = '//' + form.data('host') + '/' + key;
-                var url_path = window.location.pathname.split('/');
-                var listings_id = url_path[url_path.length - 1];
-
-                $.ajax({
-                    type: 'PATCH',
-                    url: '/listings/update_upload/' + listings_id,
-                    data: {
-                        id: listings_id,
-                        media_file_name: key
-                    },
-                    dataType: 'json',
-                    statusCode: {
-                        200: function() {
-                            window.location.href = "//" + window.location.hostname
+                    $.ajax({
+                        type: 'PATCH',
+                        url: '/listings/update_upload/' + listings_id,
+                        data: {
+                            id: listings_id,
+                            media_file_name: key
                         },
-                        404: function() {
-                            location.reload();
+                        dataType: 'json',
+                        statusCode: {
+                            200: function() {
+                                window.location.href = "//" + window.location.hostname
+                            },
+                            404: function() {
+                                location.reload();
+                            }
                         }
-                    }
-                })
-            },
-            fail: function(e, data) {
-                submitButton.prop('disabled', false);
-                progressBar.
-                    css("background", "red").
-                    text("Failed");
-                    console.log(e)
-            }
+                    })
+                },
+                fail: function(e, data) {
+                    submitButton.prop('disabled', false);
+                    progressBar.
+                        css("background", "red").
+                        text("Failed");
+                        console.log(e)
+                }
+            });
         });
     });
-});
 </script>
