--- a/app/views/partials/_flash_msg.erb
+++ b/app/views/partials/_flash_msg.erb
@@ -1,8 +1,18 @@
-<% flash.each do |key, value| %>
+<%
+
+flash.each do |key, value|
+    # bootstrap 3 to 4 alert name convertions
+    if key == 'alert'
+        key = 'danger'
+    end
+
+%>
+
 <div class="alert alert-<%= key %> alert-dismissible fade show" role="alert">
     <%= value %>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
+
 <% end %>
